feat: added feat to get records by genre